Fix MatchupItem on small screen sizes

--- a/src/Components/Sections/Matchups/matchup.module.scss
+++ b/src/Components/Sections/Matchups/matchup.module.scss
@@ -19,6 +19,10 @@
   font-size: 32px;
 }
 
+.ratio {
+  color: #767676;
+}
+
 .sc-terran {
   width: 64px;
   display: inline-block;
